ignore abstract test classes

--- a/OpenFire/builder/build.xml
+++ b/OpenFire/builder/build.xml
@@ -61,6 +61,7 @@
 			<batchtest todir="${test.results.dir}">
 				<fileset dir="${test.src.dir}">
 					<include name="**/*Test.java"/>
+					<exclude name="**/Abstract*.java"/>
 				</fileset>
 			</batchtest>
 			
