net.ip property renamed to net.addr

--- a/OpenFireRelay/resources/openfire.cfg
+++ b/OpenFireRelay/resources/openfire.cfg
@@ -20,7 +20,7 @@ password=mypass
 ## ip address and a UDP port which is forwarded to local.port by
 ## your NAT system
 ##
-net.ip=10.77.40.140
+net.addr=10.77.40.140
 net.port=20000
 
 ##
