Conversation objects will now periodically send client info to the peer via the server. This eliminates the "high latency" warnings that real xfire clients were repeatedly getting when talking to an openfire client. Public IP address for the client is now picked up from the login success message that the server sends, rather than coming from the config.

--- a/OpenFire/test/uk/azdev/openfire/common/testResources/configs/valid_config.cfg
+++ b/OpenFire/test/uk/azdev/openfire/common/testResources/configs/valid_config.cfg
@@ -16,11 +16,10 @@ username=testuser
 password=testpass
 
 ##
-## internet ip and port - set these to your internet accessible
-## ip address and a UDP port which is forwarded to local.port by
+## internet port - set this to your internet accessible
+## UDP port which is forwarded to local.port by
 ## your NAT system
 ##
-net.addr=123.221.131.113
 net.port=12345
 
 ##
