--- a/trunk/OpenFire/test/uk/azdev/openfire/common/testResources/configs/valid_config.cfg
+++ b/trunk/OpenFire/test/uk/azdev/openfire/common/testResources/configs/valid_config.cfg
@@ -16,11 +16,10 @@ username=testuser
 password=testpass
 
 ##
-## internet ip and port - set these to your internet accessible
-## ip address and a UDP port which is forwarded to local.port by
+## internet port - set this to your internet accessible
+## UDP port which is forwarded to local.port by
 ## your NAT system
 ##
-net.addr=123.221.131.113
 net.port=12345
 
 ##
