Commands interface added, invitations automatically accepted and a command to send outgoing invitations added

--- a/OpenFireRelay/resources/openfire.cfg
+++ b/OpenFireRelay/resources/openfire.cfg
@@ -16,11 +16,10 @@ username=myuser
 password=mypass
 
 ##
-## internet ip and port - set these to your internet accessible
-## ip address and a UDP port which is forwarded to local.port by
+## internet port - set this to your internet accessible
+## UDP port which is forwarded to local.port by
 ## your NAT system
 ##
-net.addr=10.77.40.140
 net.port=20000
 
 ##
@@ -76,4 +75,3 @@ games.ini.path=C\:/Program Files/Xfire/xfire_games.ini
 ## 204.71.190.24
 #server.host=cs.xfire.com
 #server.port=25999
-
