Fixed test for FriendVoiceCommsInfoMessageTest, added some extra tests for ActiveApplicationInfo

--- a/OpenFire/builder/build.xml
+++ b/OpenFire/builder/build.xml
@@ -73,7 +73,7 @@
 				   merge="true"/>
 		</emma>
 		
-		<junit printsummary="true" fork="yes">
+		<junit printsummary="true" fork="yes" forkmode="once">
 			<classpath refid="tests.lib"/>
 			<classpath>
 				<pathelement location="${instr.build.dir}"/>
